
#add_executable(PubSubMonitorSubscribingConditionsExample
#  PubSubMonitorExample.cpp)

#  target_include_directories(PubSubMonitorSubscribingConditionsExample
#    PRIVATE
#      ${CMAKE_CURRENT_LIST_DIR}/..)

#target_link_libraries(
#  PubSubMonitorSubscribingConditionsExample
#  PRIVATE
#    monitoring::monitoring)
